Fix timeline hover gap and stutter bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2356,18 +2356,18 @@ footer.major {
 	background-color: #031625;
 }
 
-#timeline:hover .tl-item {
-	width: 15%;
+#timeline:has(.tl-item:hover) .tl-item {
+	flex: 0.6;
 }
 
 .tl-item {
 	transform: translate3d(0, 0, 0);
 	position: relative;
-	width: 20%;
+	flex: 1;
 	min-height: max(42rem, 100dvh);
 	color: #fff;
 	overflow: hidden;
-	transition: width 0.5s ease;
+	transition: flex-grow 0.5s ease;
 }
 
 .tl-item:before,
@@ -2396,7 +2396,7 @@ footer.major {
 }
 
 .tl-item:hover {
-	width: 40% !important;
+	flex: 1.6 !important;
 }
 
 .tl-item:hover:after {
